--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(rgba(51, 51, 51, .5), hsla(0, 0%, 20%, .5)), url("/images/cat.jpg");
+    background: linear-gradient(rgba(51, 51, 51, .5), hsla(0, 0%, 20%, .5)), url("./images/cat.jpg");
     background-size: cover;
     background-position: repeat;
     height: 100vh;
